fixed reviews section on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,8 +375,6 @@ body {
 }
 .reviewers-list {
   list-style: none;
-  display: flex;
-  flex-direction: column;
   width: 80%;
   height: 40%;
   position: absolute;
@@ -385,17 +383,15 @@ body {
 }
 .reviewer {
   display: flex;
-  padding: 4% 0;
+  padding: 1.7rem 0;
   transition: all 1s ease-in-out;
   width: 100%;
-
   border-radius: 2rem;
 }
 .reviewer:hover {
   transform: scale(1.1);
 }
 .reviewer-image {
-  position: relative;
   height: 4rem;
   width: 4rem;
   overflow: hidden;
@@ -498,8 +494,8 @@ body {
     margin-left: 2.5%;
   }
   .reviewer {
-    padding: 3rem 0;
-    margin-left: 1%;
+    padding: 2.3rem 0;
+    margin-left: 2%;
   }
 
   .reviewer-image {
